syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

// kuku
package proto_attr;
option csharp_namespace = "Proto.Attr";

message ModelData {
	map<string, ClassData> dic_by_class = 1;
}
message ClassData {
	map<string, string> dic_by_property = 1;
    string base_class = 2;
    string interfaces = 3;
}
/*
message DicPropAttrs {
	map<string, string> dic_by_property = 1;
}
message DicClassPropAttrs {
	map<string, DicPropAttrs> dic_by_class = 1;
}
*/
